--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.19.2",
+    "nodemailer": "^6.9.15",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "nodemailer": "^7.0.5"
+    "dotenv": "^16.4.5",
+    "resend": "^4.1.0"
   },
   "repository": {
     "type": "git",
